objects/Client_Plan_Security__c.object
<CustomObject>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Plan Securities</relationshipLabel>
        <relationshipName>Client_Plan_Securities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Description__c</fullName>
        <label>Security Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Client Plan Security</label>
    <nameField>
        <displayFormat>CPS-{0000}</displayFormat>
        <label>Client Plan Security Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Plan Securities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>